--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
             <a href="{{ url_for('pages.calendar') }}" class="{{ 'active' if active_page == 'calendar' else '' }}">Calendar</a>
             <a href="{{ url_for('pages.equipment') }}" class="{{ 'active' if active_page == 'equipment' else '' }}">Equipment</a>
             <a href="{{ url_for('pages.teams') }}" class="{{ 'active' if active_page == 'teams' else '' }}">Teams</a>
+            <a href="{{ url_for('pages.work_centers') }}" class="{{ 'active' if active_page == 'work_centers' else '' }}"> Work Centers </a>
             <a href="{{ url_for('auth.logout') }}" class="logout">Logout</a>
         </div>
 
